tests/baselines/reference/topLevelAwaitErrors.6(module=esnext).errors.txt
topLevelAwaitErrors.6.ts(2,17): error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.


==== topLevelAwaitErrors.6.ts (1 errors) ====
    // await in exported function name should fail
    export function await() {
                    ~~~~~
!!! error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
    }
    